# pyxel_test

./: main.py  pyproject.toml
Revenue_runner/: .env  .gitgnore  edinet_data.json
Revenue_runner/downloads_edinet/: index.csv
Revenue_runner/downloads_edinet/E02144/2020_06_24/: meta_S100IUNR.json
Revenue_runner/downloads_edinet/E02144/2021_06_24/: meta_S100LO6W.json
Revenue_runner/downloads_edinet/E02144/2021_07_30/: meta_S100M26Y.json  meta_S100M270.json
Revenue_runner/downloads_edinet/E02144/2022_06_23/: meta_S100OC13.json
Revenue_runner/downloads_edinet/E02144/2023_06_30/: meta_S100QZHY.json  meta_S100RAR0.json
Revenue_runner/downloads_edinet/E02144/2024_06_25/: meta_S100TR7I.json
Revenue_runner/downloads_edinet/E02144/S100VWVY/: meta.json
Revenue_runner/tools/: EDINET.py  EDINET_fetch.py  EDINET_xbrl.py  data_fetch.py
balance_sheet_test/: main.py
balance_sheet_test/core/: models.py
balance_sheet_test/data/: snap_multi.py
balance_sheet_test/tools/: data_fetch.py  ticker_list.py
breakout/: README.md  breakout.py
bullet_pattern/: main.py
bullet_pattern/core/: bullet.py  patterns.py  player.py  ui.py  world.py
bullet_pattern/data/: patterns_demo.json  stage01.json
bullet_pattern_v2/core/: bullet.py  patterns.py  player.py  timeline.py  world.py
bullet_pattern_v2/data/: patterns_demo.json
bullet_pattern_v3/: README.md  main.py
bullet_pattern_v3/core/: bullet.py  emitter.py  patterns.py  world.py
bullet_pattern_v3/data/: patterns_demo.json  stage01.json
(+42 files in other folders)
